--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 
 services:
   db:
@@ -9,12 +9,10 @@ services:
       - POSTGRES_PASSWORD=postgres
   web:
     build: .
-    user: 1000:1000
-    command: bash -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     working_dir: /usr/src
     volumes:
       - .:/usr/src
-    ports:
-      - 8000:8000
     depends_on:
       - db
+    environment:
+      - SQL_HOST=db
