--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,4 +7,4 @@ services:
       - 80:8000
     environment:
       - DEBUG=0
-      - DJANGO_ALLOWED_HOSTS=34.71.127.108
+      - DJANGO_ALLOWED_HOSTS=e-roubo.akumaex.com
