--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3.8'
 services:
   db:
     image: postgres
+    volumes:
+      - postgres_data:/var/lib/postgresql/data 
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
@@ -16,4 +18,6 @@ services:
       - db
     environment:
       - SQL_HOST=db
-      - IPSTACK=b9adaee387adf5328c68006ed38f320a
+      - IPSTACK=b9adaee387adf5328c68006ed38f320a  
+volumes:
+  postgres_data:
