--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,4 +7,5 @@ services:
       - 80:8000
     environment:
       - DEBUG=0
-      - DJANGO_ALLOWED_HOSTS=e-roubo.akumaex.com
+      - DJANGO_ALLOWED_HOSTS=eroubo.akumaex.com
+    tty: true
